ql/src/test/queries/positive/input8.q
--! qt:dataset:src1
FROM src1 
SELECT 4 + NULL, src1.key - NULL, NULL + NULL
