ql/src/test/queries/negative/garbage.q
--! qt:dataset:src
this is totally garbage SELECT src.key WHERE a lot of garbage
